Texture bake running out of memory. #57554

Closed
opened 2018-11-01 11:09:41 +01:00 by Bill Currie · 8 comments

System Information
Debian Linux (sid), NVIDIA Corporation GP104 [GeForce GTX 1080]

Blender Version
Broken: blender 2.8 git 2a2db39f3a to 10d7ebc469 (current as of this writing)
Worked: blender 2.8 git cd48d4576b (preceeding commit)

Short description of error
Attempting to bake (diffuse colors) to a texture results in the following error:
Baking: out of memory while creating BHVTree for object "CubeBakeSource"

Exact steps for others to reproduce the error
In the attached blend file, hit the "bake" button (lower right). Works in git commit cd48d4576b but gives the above error in git commit 2a2db39f3a.

baketest.blend

**System Information** Debian Linux (sid), NVIDIA Corporation GP104 [GeForce GTX 1080] **Blender Version** Broken: blender 2.8 git 2a2db39f3a6 to 10d7ebc469b (current as of this writing) Worked: blender 2.8 git cd48d4576ba (preceeding commit) **Short description of error** Attempting to bake (diffuse colors) to a texture results in the following error: Baking: out of memory while creating BHVTree for object "CubeBakeSource" **Exact steps for others to reproduce the error** In the attached blend file, hit the "bake" button (lower right). Works in git commit cd48d4576ba but gives the above error in git commit 2a2db39f3a6. [baketest.blend](https://archive.blender.org/developer/F5321749/baketest.blend)
Author

Added subscriber: @taniwha

Added subscriber: @taniwha

#57768 was marked as duplicate of this issue

#57768 was marked as duplicate of this issue
Member

Added subscribers: @ideasman42, @lichtwerk

Added subscribers: @ideasman42, @lichtwerk
Member

@ideasman42 : mind having a look?

@ideasman42 : mind having a look?

Added subscriber: @skywalger

Added subscriber: @skywalger

This issue was referenced by 99d9d3dbce

This issue was referenced by 99d9d3dbcee8035d7b69adc5b9a13c79b2aedbe5

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author

Thank you. It seems to work nicely now.

Thank you. It seems to work nicely now.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#57554
No description provided.