Fix T57554: texture bake object to active error after recent changes.